--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ display: inline-block;
 width: 20px;
 height: 20px;
 margin-right: 10px;
-background-image: url("/img/icons/tick.png");
+background-image: url("img/icons/tick.png");
 background-repeat: no-repeat;
 background-size: contain;
 background-position: center;
