--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ display: inline-block;
 width: 20px;
 height: 20px;
 margin-right: 10px;
-background-image: url("img/icons/tick.png");
+background-image: url("./img/icons/tick.png");
 background-repeat: no-repeat;
 background-size: contain;
 background-position: center;
@@ -326,7 +326,7 @@ height: auto;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
-background-image: url("/img/nice.jpg");
+background-image: url("./img/nice.jpg");
 background-position: center; 
 background-repeat: no-repeat; 
 background-size: cover;
@@ -689,9 +689,9 @@ color: antiquewhite;
     margin-top: 20px; /* Отступ над картинкой */
   }
 
-  .welcome__btn {
+  /* .welcome__btn {
   
-  }
+  }*/
 
   button.welcome__btn {
     margin-top: 20px; /* Небольшой отступ перед кнопкой */
