--- a/style.css
+++ b/style.css
@@ -1037,7 +1037,7 @@ margin-bottom: 50px;
 }
 
 /*---------------------------------------------------------------------адаптив секции feedback для 768px---------------------------------------------------------------------*/
-@media  screen and (max-width: 768px) {
+@media (max-width: 768px) {
 .feedback {
 max-width: 100%;
 height: auto;
