--- a/style.css
+++ b/style.css
@@ -1390,9 +1390,13 @@ white-space: nowrap;
   }
 
   .feedback__form-wrapper {
-    max-width: 300px;
-    background-size: contain;
-    padding: 10px; /* ещё больше сокращаем отступы */
+    background-image: url("./img/nice.jpg");
+    max-width: 250px;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 10px; 
   }
 
   .feedback__title {
